; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_git.c__git_action.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_git.c__git_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i8*, i32)* @_git_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_git_action(i32** %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %7, align 8
  store i32* %11, i32** %10, align 8
  %12 = load i32, i32* %9, align 4
  switch i32 %12, label %33 [
    i32 128, label %13
    i32 129, label %18
    i32 130, label %23
    i32 131, label %28
  ]

13:                                               ; preds = %4
  %14 = load i32*, i32** %10, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i32**, i32*** %6, align 8
  %17 = call i32 @_git_uploadpack_ls(i32* %14, i8* %15, i32** %16)
  store i32 %17, i32* %5, align 4
  br label %35

18:                                               ; preds = %4
  %19 = load i32*, i32** %10, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i32**, i32*** %6, align 8
  %22 = call i32 @_git_uploadpack(i32* %19, i8* %20, i32** %21)
  store i32 %22, i32* %5, align 4
  br label %35

23:                                               ; preds = %4
  %24 = load i32*, i32** %10, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = load i32**, i32*** %6, align 8
  %27 = call i32 @_git_receivepack_ls(i32* %24, i8* %25, i32** %26)
  store i32 %27, i32* %5, align 4
  br label %35

28:                                               ; preds = %4
  %29 = load i32*, i32** %10, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = load i32**, i32*** %6, align 8
  %32 = call i32 @_git_receivepack(i32* %29, i8* %30, i32** %31)
  store i32 %32, i32* %5, align 4
  br label %35

33:                                               ; preds = %4
  %34 = load i32**, i32*** %6, align 8
  store i32* null, i32** %34, align 8
  store i32 -1, i32* %5, align 4
  br label %35

35:                                               ; preds = %33, %28, %23, %18, %13
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @_git_uploadpack_ls(i32*, i8*, i32**) #1

declare dso_local i32 @_git_uploadpack(i32*, i8*, i32**) #1

declare dso_local i32 @_git_receivepack_ls(i32*, i8*, i32**) #1

declare dso_local i32 @_git_receivepack(i32*, i8*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
